; ModuleID = '/home/carl/AnghaBench/memcached/extr_items.c_item_size_ok.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_items.c_item_size_ok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@settings = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @item_size_ok(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca [40 x i8], align 16
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp slt i32 %11, 2
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %31

14:                                               ; preds = %3
  %15 = load i64, i64* %5, align 8
  %16 = add i64 %15, 1
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = getelementptr inbounds [40 x i8], [40 x i8]* %8, i64 0, i64 0
  %20 = call i64 @item_make_header(i64 %16, i32 %17, i32 %18, i8* %19, i32* %9)
  store i64 %20, i64* %10, align 8
  %21 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @settings, i32 0, i32 0), align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %14
  %24 = load i64, i64* %10, align 8
  %25 = add i64 %24, 4
  store i64 %25, i64* %10, align 8
  br label %26

26:                                               ; preds = %23, %14
  %27 = load i64, i64* %10, align 8
  %28 = call i64 @slabs_clsid(i64 %27)
  %29 = icmp ne i64 %28, 0
  %30 = zext i1 %29 to i32
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %26, %13
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i64 @item_make_header(i64, i32, i32, i8*, i32*) #1

declare dso_local i64 @slabs_clsid(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
